fix z-index for extra hour button radio group

--- a/www/static/css/timesheet.css
+++ b/www/static/css/timesheet.css
@@ -39,3 +39,7 @@
 form .error {
     color: #B94A48;
 }
+
+#reportForm .btn-group .active {
+  z-index:1;
+}
